// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pokemon Page: expanded 1`] = `
<PokemonPage
  pokemon={
    Object {
      "height": 7,
      "id": 1,
      "imageURL": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
      "name": "bulbasaur",
      "stats": Object {
        "attack": 49,
        "defense": 49,
        "hp": 45,
        "special-attack": 65,
        "special-defense": 65,
        "speed": 45,
      },
      "types": Array [
        "grass",
        "poison",
      ],
      "weight": 69,
    }
  }
>
  <Head>
    <_default
      headManager={Object {}}
      inAmpMode={false}
      reduceComponentsToState={[Function]}
    />
  </Head>
  <main>
    <h1>
      #1 bulbasaur
    </h1>
    <img
      alt="bulbasaur"
      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
    />
    <h2>
      <a
        href=""
        onClick={[Function]}
      >
        <strong
          style={
            Object {
              "display": "block",
              "float": "left",
              "width": 40,
            }
          }
        >
          -
        </strong>
        Info
      </a>
    </h2>
    <dl>
      <dt>
        Height:
      </dt>
      <dd>
        7
      </dd>
      <dt>
        Weight:
      </dt>
      <dd>
        69
      </dd>
      <dt>
        Types:
      </dt>
      <dd>
         grass poison
      </dd>
    </dl>
    <h2>
      <a
        href=""
        onClick={[Function]}
      >
        <strong
          style={
            Object {
              "display": "block",
              "float": "left",
              "width": 40,
            }
          }
        >
          -
        </strong>
        Stats
      </a>
    </h2>
    <dl>
      <dt>
        hp: 
      </dt>
      <dd>
        45
      </dd>
      <dt>
        attack: 
      </dt>
      <dd>
        49
      </dd>
      <dt>
        defense: 
      </dt>
      <dd>
        49
      </dd>
      <dt>
        special-attack: 
      </dt>
      <dd>
        65
      </dd>
      <dt>
        special-defense: 
      </dt>
      <dd>
        65
      </dd>
      <dt>
        speed: 
      </dt>
      <dd>
        45
      </dd>
    </dl>
  </main>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <Link
      href="/"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Ir a home
      </a>
    </Link>
  </div>
</PokemonPage>
`;

exports[`Pokemon Page: non expanded 1`] = `
<PokemonPage
  pokemon={
    Object {
      "height": 7,
      "id": 1,
      "imageURL": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
      "name": "bulbasaur",
      "stats": Object {
        "attack": 49,
        "defense": 49,
        "hp": 45,
        "special-attack": 65,
        "special-defense": 65,
        "speed": 45,
      },
      "types": Array [
        "grass",
        "poison",
      ],
      "weight": 69,
    }
  }
>
  <Head>
    <_default
      headManager={Object {}}
      inAmpMode={false}
      reduceComponentsToState={[Function]}
    />
  </Head>
  <main>
    <h1>
      #1 bulbasaur
    </h1>
    <img
      alt="bulbasaur"
      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
    />
    <h2>
      <a
        href=""
        onClick={[Function]}
      >
        <strong
          style={
            Object {
              "display": "block",
              "float": "left",
              "width": 40,
            }
          }
        >
          +
        </strong>
        Info
      </a>
    </h2>
    <dl />
    <h2>
      <a
        href=""
        onClick={[Function]}
      >
        <strong
          style={
            Object {
              "display": "block",
              "float": "left",
              "width": 40,
            }
          }
        >
          +
        </strong>
        Stats
      </a>
    </h2>
    <dl />
  </main>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <Link
      href="/"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Ir a home
      </a>
    </Link>
  </div>
</PokemonPage>
`;
